# easyfinemap

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  environment-dev.yml  environment.yml  environment_1.yml  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  python-package-conda.yml  release.yml
api/: index.html
api/LDRef/: index.html
api/Loci/: index.html
api/Sumstat/: index.html
api/cli/: index.html
api/easyfinemap/: index.html
api/tools/: index.html
api/utils/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  fileformats.md  fine.md  identify.md  installation.md  quickstart.md  usage.md  validate.md
docs/api/: LDRef.md  Loci.md  Sumstat.md  cli.md  easyfinemap.md  tools.md  utils.md
easy_finemap/: __init__.py  cli.py
easyfinemap/: __init__.py  cli.py  constant.py  easyfinemap.py  ldmatrix.py  ldref.py  loci.py  logger.py  plots.py  sumstat.py  sumstats.py  tools.py  utils.py
exampledata/: PH251.conditional.leadsnp.txt  PH251.conditional.loci.txt  PH251.distance.leadsnp.txt  PH251.txt.gz.tbi
fileformats/: index.html
fine/: index.html
identify/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  demo.py  test_cli.py  test_easy_finemap.py  test_easyfinemap.py  test_ldref.py  test_loci.py  test_sumstat.py  test_sumstats.py  test_tools.py  test_utils.py
tests/cojo_test/: cojo_slct_test.ipynb
tests/exampledata/: conditional.leadsnp.txt  conditional.loci.txt  distance.leadsnp.txt  distance.loci.txt  ldclumping.leadsnp.txt  ldclumping.loci.txt  noEAF_noMAF.txt.gz.tbi  sig.txt
tests/exampledata/LDREF/: clean.bed  clean.bim  extract.bim  hapmap3.bim  hapmap3.valid.chr1.bed  hapmap3.valid.chr1.bim  hapmap3.valid.chr10.bed  hapmap3.valid.chr10.bim  hapmap3.valid.chr11.bed  hapmap3.valid.chr11.bim  hapmap3.valid.chr12.bed  hapmap3.valid.chr12.bim  hapmap3.valid.chr13.bed  hapmap3.valid.chr13.bim  hapmap3.valid.chr14.bed  hapmap3.valid.chr14.bim  hapmap3.valid.chr15.bed  hapmap3.valid.chr15.bim  hapmap3.valid.chr16.bed  hapmap3.valid.chr16.bim  hapmap3.valid.chr17.bed  hapmap3.valid.chr17.bim  hapmap3.valid.chr18.bed  hapmap3.valid.chr18.bim  hapmap3.valid.chr19.bed  hapmap3.valid.chr19.bim  hapmap3.valid.chr2.bed  hapmap3.valid.chr2.bim  hapmap3.valid.chr2.fam  hapmap3.valid.chr20.bed  hapmap3.valid.chr20.bim  hapmap3.valid.chr21.bed  hapmap3.valid.chr21.bim  hapmap3.valid.chr22.bed  hapmap3.valid.chr22.bim  hapmap3.valid.chr3.bed  hapmap3.valid.chr3.bim  hapmap3.valid.chr4.bed  hapmap3.valid.chr4.bim  hapmap3.valid.chr5.bed  (+11 more)
usage/: index.html
validate/: index.html
